# Trading-System

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  go.mod  go.sum  go_format_check.sh  install_dependencies.sh  nogo_config.json  skaffold.yaml
.github/workflows/: pr.yaml  release.yaml
afe/: BUILD  main.go  server.go
client/: BUILD  main.go
common/: BUILD  env.go  interceptors.go
common/database/: BUILD  client.go  config.go
common/kafka/: BUILD  consumer_runner.go  factory.go  partitioner.go  producer.go
executed-consumer/: main.go
executed-trades/: BUILD  handler.go  main.go
k8s/: afe-service.yaml  afe.yaml  config.yaml  deployment.yaml  executed-trades-worker.yaml  kafka-values.yaml  topics-job.yaml  worker.yaml
model/: types.go
proto/: BUILD  afe.proto  events.proto  market_data.proto
scripts/: deploy.sh  destroy.sh  watch_executed_trades.sh
scripts/e2e/: README.md  _helpers.sh  basic.sh  helpers.sh  recovery.sh
worker/: BUILD  dump.go  engine.go  kafka.go  main.go  orderbook.go  snapshot.go  snapshotter.go
